// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viewing 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling: 
    $10,032,322.30
    .
  </h1>
</div>
`;

exports[`Viewing 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    13
     
    expenses
     totalling: 
    $10.00
    .
  </h1>
</div>
`;
